--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@
 # process, which may cause wedges in the gate later.
 
 pbr!=2.1.0,>=2.0.0 # Apache-2.0
-requests
-six
-retrying
+requests>=2.18.0
+six>=1.10.0
+retrying>=0.9.0
