Add flake-import-order support

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,15 @@
+[flake8]
+max-complexity = 10
+import-order-style = pep8
+
 [tox]
 envlist = py35
 
 [testenv:flake8]
 skip_install = True
-deps = flake8
+deps =
+    flake8
+    #Add missing docstring and reenable this extension
+    #flake8-docstrings
+    flake8-import-order
 commands = flake8 huaweipythonsdkcore
