--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,6 @@ envlist = py35
 skip_install = True
 deps =
     flake8
-    #Add missing docstring and reenable this extension
-    #flake8-docstrings
+    flake8-docstrings
     flake8-import-order
 commands = flake8 huaweipythonsdkcore
