--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,7 @@
 [flake8]
 max-complexity = 10
 import-order-style = pep8
-
-[tox]
-envlist = py35
+ignore = D100, D105
 
 [testenv:flake8]
 skip_install = True
