Add more travis jobs

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,43 @@ sudo: false
 language: python
 
 python:
-  - 2.7
   - 3.4
 
 install:
   - pip install -r test-requirements.txt
 
-script:
-  - tox -e flake8
+branches:
+  only:
+    - master
+jobs:
+  include:
+    - stage: lint checks
+      script:
+        - tox -e flake8
+      python:
+        - 2.7
+        - 3.4
+    - stage: unit tests
+      script:
+        - echo skipped
+      python:
+        - 2.7
+        - 3.4
+    - stage: functional tests
+      script:
+        - echo skipped
+      python:
+        - 2.7
+        - 3.4
+    - stage: build package file
+      script:
+        - python setup.py sdist
+    - stage: publish release
+      script: echo publishing...
+      deploy:
+        provider: releases
+        api_key: ea2041dc28b324ae90ac966ea933c633aad8c6ec
+        skip_cleanup: true
+        file: dist/*.tar.gz
+        on:
+          tags: true
