--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,6 @@ jobs:
         - python setup.py sdist
       deploy:
         provider: releases
-        api_key: 23213457abab4ba6fb24aac98773c5d17cf6233d
+        api_key: $GITHUB_TOKEN
         skip_cleanup: true
         file: dist/*.tar.gz
