--- a/tox.ini
+++ b/tox.ini
@@ -9,3 +9,8 @@ deps =
     flake8
     flake8-import-order
 commands = flake8 huaweipythonsdkcore
+
+[testenv:functional]
+passenv = *
+deps = stestr
+commands = stestr run --group-regex tests.functional
