Upgrade tox for functional test

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,8 @@ deps =
 commands = flake8 huaweipythonsdkcore
 
 [testenv:functional]
+deps =
+    setuptools>=38.0.0
 passenv = *
 deps = stestr
 commands = stestr run --group-regex tests.functional
