--- a/tox.ini
+++ b/tox.ini
@@ -12,9 +12,17 @@ deps =
     flake8-import-order
 commands = flake8 huaweipythonsdkcore
 
+[testenv:unit]
+deps =
+    stestr
+    ddt
+    setuptools>=38.0.0
+passenv = *
+commands = stestr run --test-path ./tests/unit
+
 [testenv:functional]
 deps =
     stestr
     setuptools>=38.0.0
 passenv = *
-commands = stestr run --group-regex tests.functional
+commands = stestr run --test-path ./tests/functional
