--- a/tox.ini
+++ b/tox.ini
@@ -15,14 +15,13 @@ commands = flake8 huaweipythonsdkcore
 [testenv:unit]
 deps =
     stestr
-    ddt
-    setuptools>=38.0.0
+    -r{toxinidir}/test-requirements.txt
 passenv = *
 commands = stestr run --test-path ./tests/unit
 
 [testenv:functional]
 deps =
     stestr
-    setuptools>=38.0.0
+    -r{toxinidir}/test-requirements.txt
 passenv = *
 commands = stestr run --test-path ./tests/functional
